--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-Jabiyeff-CAF"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -29,6 +29,16 @@ CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SCHED_TUNE=y
+CONFIG_STUNE_ASSIST=y
+CONFIG_CPUSET_ASSIST=y
+CONFIG_CPUSET_AUDIO_APP="0-3"
+CONFIG_CPUSET_BG="0-1"
+CONFIG_CPUSET_CAMERA="0-3,6-7"
+CONFIG_CPUSET_DISPLAY="4-7"
+CONFIG_CPUSET_FG="0-3,6-7"
+CONFIG_CPUSET_RESTRICTED="0-3"
+CONFIG_CPUSET_SYSTEM_BG="0-3"
+CONFIG_CPUSET_TOP_APP="0-7"
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_BZIP2 is not set
@@ -79,15 +89,13 @@ CONFIG_PM_AUTOSLEEP=y
 CONFIG_SUSPEND_SKIP_SYNC=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
-# CONFIG_PM_WAKELOCKS_GC is not set
+CONFIG_PM_WAKELOCKS_GC=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_PM_WAKELOCKS_SENSOR_IND_HACK=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_BOOST=y
+CONFIG_CPU_FREQ_STAT_DETAILS=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_MSM=y
 CONFIG_NET=y
@@ -117,6 +125,11 @@ CONFIG_INET_XFRM_MODE_TUNNEL=y
 CONFIG_INET_XFRM_MODE_BEET=y
 CONFIG_INET_UDP_DIAG=y
 CONFIG_INET_DIAG_DESTROY=y
+CONFIG_TCP_CONG_ADVANCED=y
+# CONFIG_TCP_CONG_BIC is not set
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_TCP_CONG_HTCP is not set
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_OPTIMISTIC_DAD=y
@@ -246,7 +259,6 @@ CONFIG_CFG80211=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 # CONFIG_CFG80211_CRDA_SUPPORT is not set
 CONFIG_RFKILL=y
-CONFIG_NFC_NQ=y
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
@@ -367,10 +379,6 @@ CONFIG_POWER_RESET_QCOM=y
 # CONFIG_QCOM_DLOAD_MODE is not set
 CONFIG_QPNP_FG=y
 CONFIG_QPNP_SMBCHARGER=y
-CONFIG_QPNP_VM_BMS=y
-CONFIG_QPNP_LINEAR_CHARGER=y
-CONFIG_QPNP_TYPEC=y
-CONFIG_QPNP_QG=y
 CONFIG_MSM_APM=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
 CONFIG_THERMAL=y
@@ -541,6 +549,7 @@ CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ION=y
 CONFIG_ION_MSM=y
+CONFIG_ALLOC_BUFFERS_IN_4K_CHUNKS=y
 CONFIG_IPA=y
 CONFIG_RMNET_IPA=y
 CONFIG_RNDIS_IPA=y
@@ -565,7 +574,7 @@ CONFIG_QCOM_SCM=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_QCOM_WATCHDOG_V2=y
 CONFIG_QPNP_PBS=y
-CONFIG_QCOM_MEMORY_DUMP_V2=y
+# CONFIG_QCOM_MEMORY_DUMP_V2 is not set
 CONFIG_MSM_RPM_SMD=y
 CONFIG_QCOM_BUS_SCALING=y
 CONFIG_QCOM_SECURE_BUFFER=y
@@ -660,6 +669,7 @@ CONFIG_CRYPTO_GCM=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_TWOFISH=y
+CONFIG_CRYPTO_ZSTD=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRYPTO_DEV_QCOM_MSM_QCE=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
@@ -677,14 +687,6 @@ CONFIG_QMI_ENCDEC=y
 
 #Prima
 CONFIG_PRONTO_WLAN=y
-CONFIG_PRIMA_WLAN_LFR=y
-CONFIG_PRIMA_WLAN_OKC=y
-CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
-CONFIG_WLAN_FEATURE_11W=y
-CONFIG_QCOM_VOWIFI_11R=y
-CONFIG_ENABLE_LINUX_REG=y
-CONFIG_WLAN_OFFLOAD_PACKETS=y
-CONFIG_QCOM_TDLS=y
 
 #Santoni
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
@@ -698,5 +700,5 @@ CONFIG_MACH_XIAOMI_SANTONI=y
 CONFIG_CMDLINE="androidboot.usbconfigfs=true"
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_EFI is not set
-CONFIG_MSMB_CAMERA_LEGACY=y 
-CONFIG_PM_WAKELOCKS_SENSOR_IND_HACK=y
+CONFIG_MSMB_CAMERA_LEGACY=y
+CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="zstd"
