--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Jabiyeff-CAF"
+CONFIG_LOCALVERSION="-LA.UM.8.6.2.r2-02800-89xx.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -29,16 +29,6 @@ CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SCHED_TUNE=y
-CONFIG_STUNE_ASSIST=y
-CONFIG_CPUSET_ASSIST=y
-CONFIG_CPUSET_AUDIO_APP="0-3"
-CONFIG_CPUSET_BG="0-1"
-CONFIG_CPUSET_CAMERA="0-3,6-7"
-CONFIG_CPUSET_DISPLAY="4-7"
-CONFIG_CPUSET_FG="0-3,6-7"
-CONFIG_CPUSET_RESTRICTED="0-3"
-CONFIG_CPUSET_SYSTEM_BG="0-3"
-CONFIG_CPUSET_TOP_APP="0-7"
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_BZIP2 is not set
@@ -95,7 +85,11 @@ CONFIG_PM_WAKELOCKS_SENSOR_IND_HACK=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
-CONFIG_CPU_FREQ_STAT_DETAILS=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_BOOST=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_MSM=y
 CONFIG_NET=y
@@ -379,6 +373,10 @@ CONFIG_POWER_RESET_QCOM=y
 # CONFIG_QCOM_DLOAD_MODE is not set
 CONFIG_QPNP_FG=y
 CONFIG_QPNP_SMBCHARGER=y
+CONFIG_QPNP_VM_BMS=y
+CONFIG_QPNP_LINEAR_CHARGER=y
+CONFIG_QPNP_TYPEC=y
+CONFIG_QPNP_QG=y
 CONFIG_MSM_APM=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
 CONFIG_THERMAL=y
@@ -546,7 +544,10 @@ CONFIG_UIO=y
 CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ASHMEM=y
-CONFIG_ANDROID_LOW_MEMORY_KILLER=y
+# CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
+CONFIG_ANDROID_SIMPLE_LMK=y
+CONFIG_ANDROID_SIMPLE_LMK_MINFREE=128
+CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=200
 CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_ALLOC_BUFFERS_IN_4K_CHUNKS=y
@@ -574,7 +575,7 @@ CONFIG_QCOM_SCM=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_QCOM_WATCHDOG_V2=y
 CONFIG_QPNP_PBS=y
-# CONFIG_QCOM_MEMORY_DUMP_V2 is not set
+CONFIG_QCOM_MEMORY_DUMP_V2=y
 CONFIG_MSM_RPM_SMD=y
 CONFIG_QCOM_BUS_SCALING=y
 CONFIG_QCOM_SECURE_BUFFER=y
@@ -595,6 +596,7 @@ CONFIG_MSM_PERFORMANCE=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_AVTIMER=y
 CONFIG_MSM_PM=y
+CONFIG_MSM_IDLE_STATS=y
 CONFIG_QCOM_DCC=y
 CONFIG_QTI_RPM_STATS_LOG=y
 CONFIG_QCOM_FORCE_WDOG_BITE_ON_PANIC=y
@@ -687,6 +689,14 @@ CONFIG_QMI_ENCDEC=y
 
 #Prima
 CONFIG_PRONTO_WLAN=y
+CONFIG_PRIMA_WLAN_LFR=y
+CONFIG_PRIMA_WLAN_OKC=y
+CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
+CONFIG_WLAN_FEATURE_11W=y
+CONFIG_QCOM_VOWIFI_11R=y
+CONFIG_ENABLE_LINUX_REG=y
+CONFIG_WLAN_OFFLOAD_PACKETS=y
+CONFIG_QCOM_TDLS=y
 
 #Santoni
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
