--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -673,6 +673,8 @@ dtb-$(CONFIG_ARCH_SDM429) += sdm429-mtp.dtb \
 endif
 
 dtb-$(CONFIG_ARCH_SDM845_VM) += sdm845-vm.dtb
+dtb-$(CONFIG_MACH_XIAOMI_SANTONI) := xiaomi-santoni.dtb
+dtb-$(CONFIG_MACH_XIAOMI_SANTONI_TREBLE) := xiaomi-santoni-treble.dtb
 
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
